--- a/css files/style5.css
+++ b/css files/style5.css
@@ -8,6 +8,7 @@
 body {
     background-color: rgb(240, 243, 243);
 }
+
 /* navbar */
 .navbar4 {
     display: flex;
@@ -16,8 +17,8 @@ body {
     margin: 30px;
     background-color: #ffff;
     align-items: center;
-      z-index:1000;
- position: fixed;
+    z-index: 1000;
+    position: fixed;
     top: 50;
     right: 40px;
     left: 40px;
@@ -84,21 +85,28 @@ ul {
     font-size: 30px;
     display: none;
 }
-.listclick li :hover{ border: 2px solid blue;
-background-color: #1c69d4;
+
+.listclick li :hover {
+    border: 2px solid blue;
+    background-color: #1c69d4;
     color: #ffff;
     border: none;
     padding: 16px;
+    transition:  0.2s ease;
 }
-.serch-icon :hover{border: 2px solid blue;
-background-color: #1c69d4;
+
+.serch-icon :hover {
+    border: 2px solid blue;
+    background-color: #1c69d4;
     color: #ffff;
     border: none;
     padding: 16px;
-cursor: pointer;}
+    cursor: pointer;
+     transition:  0.2s ease;
+}
 
 /* navbar end */
-/*  */
+/* hero section */
 .vido2 {
     display: block;
 }
@@ -142,32 +150,35 @@ h1 {
     padding: 90px 90px;
 
 }
-/*  */
 
-.power-section{
-display: flex;
-justify-content: center;}
- .image-text {
-  color: #161616;
-  padding-top: 10px;
-  font-size: 25px;
-   font-weight: 540;
-     line-height: 1.3;
 
-} 
+.power-section {
+    display: flex;
+    justify-content: center;
+}
 
-/*  */
-.end{
+.image-text {
+    color: #161616;
+    padding-top: 10px;
+    font-size: 25px;
+    font-weight: 540;
+    line-height: 1.3;
+
+}
+
+
+.end {
     padding: 40px;
     padding-left: 140px;
 }
-.second-men-box img{
+
+.second-men-box img {
     width: 88%;
-   display: block;
-  margin: 0 auto;
+    display: block;
+    margin: 0 auto;
 }
 
-.second-men-box{
+.second-men-box {
     display: grid;
 }
 
@@ -218,49 +229,53 @@ justify-content: center;}
     padding-left: 70px;
     padding-top: 10px;
 }
+
 /* show more waly section sy phly wala box */
 
 
 
 
 .digital-journey {
-  max-width: 1180px;
-  margin: 60px auto;
+    max-width: 1180px;
+    margin: 60px auto;
 }
 
 .cards {
-  display: grid;
-  
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 5px;
+    display: grid;
+
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 5px;
 }
 
 
 
 .box-one img {
-  width: 100%;
-  height: 220px;
-    
-  cursor: pointer;
+    width: 100%;
+    height: 220px;
+
+    cursor: pointer;
 }
 
 
 .tag {
-  margin: 19px 0 8px;
-  font-size: 18px;
-  color: #464545;
-  font-weight: 50;
-  padding-top: 10px;
-  padding-left: 40px;
+    margin: 19px 0 8px;
+    font-size: 18px;
+    color: #464545;
+    font-weight: 50;
+    padding-top: 10px;
+    padding-left: 40px;
 }
-.ages-sec{  font-size: 22px;
-  font-weight: 500;
-  line-height: 1.4;
-  color: #000;
-  padding-left: 40px;
+
+.ages-sec {
+    font-size: 22px;
+    font-weight: 500;
+    line-height: 1.4;
+    color: #000;
+    padding-left: 40px;
 
 
 }
+
 /*  */
 .img-box-five {
     width: 100%;
@@ -381,7 +396,8 @@ justify-content: center;}
     line-height: 1.3;
     max-width: 90%;
 }
-.main-grid{
+
+.main-grid {
     padding-top: 50px;
 }
 
@@ -428,172 +444,78 @@ justify-content: center;}
     line-height: 40px;
     color: #141414;
 }
-/*  */
-/* SECTION */
+
+
 .bmw-card-section {
-  padding-top: 50px;
+    padding-top: 50px;
 }
 
-/* GRID */
 .bmw-card-grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 5px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 5px;
 }
 
-/* CARD */
 .bmw-card {
-  cursor: pointer;
+    cursor: pointer;
 }
 
-/* IMAGE BOX (IMPORTANT) */
 .bmw-card-img {
-  overflow: hidden;        /* 👈 image bahar nahi jayegi */
+    overflow: hidden;
 }
 
-/* IMAGE */
 .bmw-card-img img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transition: transform 0.6s ease;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.6s ease;
 }
 
-/* HOVER EFFECT */
 .bmw-card:hover .bmw-card-img img {
-  transform: scale(1.08);  /* 👈 andar hi zoom */
+    transform: scale(1.08);
 }
 
-/* TEXT */
 .bmw-card-text {
-  padding: 40px ;
-}
-.image-sound{  font-size: 20px;
-  font-weight: 540;
-  line-height: 1.90;
-  color: #222222;
-
+    padding: 40px;
 }
 
-.power-section{
-display: flex;
-justify-content: center;}
- .image-text {
-  color: #161616;
-  padding-top: 10px;
-  font-size: 25px;
-   font-weight: 540;
-     line-height: 1.3;
+.image-sound {
+    font-size: 20px;
+    font-weight: 540;
+    line-height: 1.90;
+    color: #222222;
 
-} 
+}
 
-/*  */
-.end{
+.power-section {
+    display: flex;
+    justify-content: center;
+}
+
+.image-text {
+    color: #161616;
+    padding-top: 10px;
+    font-size: 25px;
+    font-weight: 540;
+    line-height: 1.3;
+
+}
+
+.end {
     padding: 40px;
     padding-left: 140px;
 }
-.second-men-box img{
+
+.second-men-box img {
     width: 88%;
-   display: block;
-  margin: 0 auto;
+    display: block;
+    margin: 0 auto;
 }
 
-.second-men-box{
+.second-men-box {
     display: grid;
 }
 
-/*  */
-/* show more button */
-.btn-wrapper {
-  text-align: center;
-  padding-top: 90px;
-  padding-bottom: 60px;
-}
-.show-more {
-  width: 300px;         
-  height: 50px;
-  font-size: 18px;
-  font-weight: 500;
-  background: transparent;
-  border: 2px solid #2c2c2c;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-
-.show-more:hover {
-  background: #000;
-  color: #fff;
-}
-/* end */
-
-/* footer */
-.bmw-footer {
-  background-color: #1c1c1c;
-  color: #fff;
-  padding: 60px 80px;
-}
-
-.footer-languages {
-  margin-bottom: 50px;
-}
-
-.footer-languages a {
-  color: #aaa;
-  text-decoration: none;
-  margin-right: 20px;
-  font-size: 14px;
-}
-
-.footer-languages .active,
-.footer-languages a:hover {
-  color: #fff;
-}
-
-.footer-columns {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 40px;
-}
-
-.footer-col h4 {
-  font-size: 16px;
-  margin-bottom: 20px;
-  position: relative;
-}
-
-.footer-col h4::after {
-  width: 30px;
-  height: 1px;
-  background: #555;
-  position: absolute;
-  bottom: -8px;
-  left: 0;
-}
-
-.footer-col a {
-  display: block;
-  color: #aaa;
-  text-decoration: none;
-  margin-bottom: 12px;
-  font-size: 14px;
-}
-
-.footer-col a:hover {
-  color: #fff;
-}
-
-
-.site-footer {
-  color: #ffffff;
-  padding-top: 40px;
-  font-size: 17px;
-}
-/* footer end */
-
-/* end */
-
-
-/*  */
 
 .video-grid {
     display: flex;
@@ -604,7 +526,7 @@ justify-content: center;}
 
 
 
-.text-content { 
+.text-content {
     padding: 30px;
 }
 
@@ -635,34 +557,59 @@ justify-content: center;}
 
 .more-cars-container {
     display: flex;
- gap: 5px;
- align-items: center;
- justify-content: center;
- 
-}
-.image-car img{
-    width: 590px;
-}
-.text-car{
-    padding: 30px;
-}
-.text-car p{ 
-font-size: 18px;
-color: #0e0d0d;
-padding-bottom: 10px;
-font-weight: 540;
-}
-.text-car h3{ 
-font-size: 26px;
-color: #141414;
-padding-bottom: 10px;
-font-weight: 540;
-}
-.car-hide{
-    padding: 70px;
+    gap: 5px;
+    align-items: center;
+    justify-content: center;
+
 }
 
-.bmws{
+.image-car img {
+    width: 590px;
+}
+
+.text-car {
+    padding: 30px;
+}
+
+.text-car p {
+    font-size: 18px;
+    color: #0e0d0d;
+    padding-bottom: 10px;
+    font-weight: 540;
+}
+
+.text-car h3 {
+    font-size: 26px;
+    color: #141414;
+    padding-bottom: 10px;
+    font-weight: 540;
+}
+
+.car-hide {
+    padding: 70px;
+}
+.btn-wrapper {
+    text-align: center;
+    padding-top: 90px;
+    padding-bottom: 60px;
+}
+
+.show-more {
+    width: 300px;
+    height: 50px;
+    font-size: 18px;
+    font-weight: 500;
+    background: transparent;
+    border: 2px solid #2c2c2c;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.show-more:hover {
+    background: #000;
+    color: #fff;
+}
+.bmws {
     padding-inline: 90px;
 }
 
@@ -675,6 +622,76 @@ font-weight: 540;
     background-image: url("../assets/image22.webp");
 
 }
-.shadow-ca-box{
+
+.shadow-ca-box {
     padding-inline: 80px;
 }
+/* hero section end */
+
+/* footer */
+.bmw-footer {
+    background-color: #1c1c1c;
+    color: #fff;
+    padding: 60px 80px;
+}
+
+.footer-languages {
+    margin-bottom: 50px;
+}
+
+.footer-languages a {
+    color: #aaa;
+    text-decoration: none;
+    margin-right: 20px;
+    font-size: 14px;
+}
+
+.footer-languages .active,
+.footer-languages a:hover {
+    color: #fff;
+}
+
+.footer-columns {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 40px;
+}
+
+.footer-col h4 {
+    font-size: 16px;
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.footer-col h4::after {
+    width: 30px;
+    height: 1px;
+    background: #555;
+    position: absolute;
+    bottom: -8px;
+    left: 0;
+}
+
+.footer-col a {
+    display: block;
+    color: #aaa;
+    text-decoration: none;
+    margin-bottom: 12px;
+    font-size: 14px;
+}
+
+.footer-col a:hover {
+    color: #fff;
+}
+
+
+.site-footer {
+    color: #ffffff;
+    padding-top: 40px;
+    font-size: 17px;
+}
+
+/* footer end */
+
+
+
